deployments/pathweb/cluster-resources/allow-kube-dns-ccnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kube-dns
spec:
  endpointSelector: {}
  enableDefaultDeny:
    ingress: false
    egress: false
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
      matchExpressions:
      - key: "k8s:k8s-app"
        operator: In
        values:
        - kube-dns
        - node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
