deployments/pathweb/cluster-resources/internet-only-ccnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internet-only
spec:
  endpointSelector:
    matchLabels:
      preset-egress-policy: internet-only
  egress:
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 100.64.0.0/10
