deployments/pathweb/cluster-resources/internet-only-cnp.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-internet-only
spec:
  endpointSelector:
    matchLabels:
      restrict-egress: internet-only
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
      matchExpressions:
      - key: "k8s:k8s-app"
        operator: In
        values:
        - kube-dns
        - node-local-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: ::/0
      except:
      - fc00::/7
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 192.168.0.0/16
      - 172.16.0.0/12
      - 100.64.0.0/10
